# Aria

./: .env.example  .gitignore  api.py  config.py  main.py  omium.toml  pyproject.toml  state.py
agents/: __init__.py  analyst_agents.py  base.py  critique_agent.py  data_agents.py  deal_director.py  report_agent.py  risk_agent.py
graph/: __init__.py  workflow.py
static/: index.html
tools/: __init__.py  financial_tools.py  search_tools.py  sec_tools.py
